@@ -373,6 +373,7 @@ wzd_user_t * FCN_GET_USER(uid_t uid)
   wzd_row_get_string(user->username, HARD_USERNAME_LENGTH, row, UCOL_USERNAME);
   wzd_row_get_string(user->userpass, MAX_PASS_LENGTH, row, UCOL_USERPASS);
   wzd_row_get_string(user->rootpath, WZD_MAX_PATH, row, UCOL_ROOTPATH);
+  wzd_row_get_string(user->tagline, MAX_TAGLINE_LENGTH, row, UCOL_TAGLINE);
   wzd_row_get_string(user->flags, MAX_FLAGS_NUM, row, UCOL_FLAGS);
   wzd_row_get_uint((unsigned int*)&user->max_idle_time, row, UCOL_MAX_IDLE_TIME);
   wzd_row_get_uint(&user->max_ul_speed, row, UCOL_MAX_UL_SPEED);
